<resources>
    <string name="app_name">Sence Hangisi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="simdiki_sifre">Şimdiki Şifre</string>
    <string name="yeni_sifre">Yeni şifre</string>
    <string name="yeni_sifre_hint">En az 6 karakter</string>
    <string name="sifreyi_dogrula">Şifreyi doğrula</string>
    <string name="sifre_sıfırlama_sonuc">Şifrenizi sıfırlamak için e-posta adresinize bağlantı gönderilmiştir.</string>
    <string name="sifre_degistir_buton">ŞİFRENİ DEĞİŞTİR</string>
    <string name="sifreni_mi_unuttun">Şifreni mi unuttun?</string>
    <string name="suanki">Şu anki</string>
    <string name="eposta">E-posta adresi</string>
    <string name="yeni_eposta">Yeni E-posta Adresi</string>
    <string name="yeni_eposta_buton">E-postayı Güncelle</string>
    <string name="eposta_label">E-postayı güncelle</string>
    <string name="bildirimler_label">Bildirimler</string>
    <string name="text_titresim">Titreşim</string>
    <string name="text_bildirim_sesi">Bildirim Sesi</string>
    <string name="text_bildirim_aciklama">Anlık bildirimleri aç/kapat</string>
    <string name="text_bildirim_titret">Gelen bildirimlerde titret</string>
    <string name="text_bildirim_zil_sesi">Bildirim zil sesini ayarla</string>
    <string name="kAdi_buton">Kullanıcı Adını Güncelle</string>
    <string name="mevcut_kullaniciadi">Mevcut kullanıcı adı</string>
    <string name="mevcut_adSoyad">Mevcut Ad Soyad</string>
    <string name="yeni_kullanıcıadi">Yeni kullanıcı adı</string>
    <string name="title_profil">Profil</string>
    <string name="title_populerler">Popülerler</string>
    <string name="title_arkadasinibul">Arkadaşlarını Bul</string>
    <string name="title_bildirimler">Bildirimler</string>
    <string name="title_ayarlar">Ayarlar</string>
    <string name="title_cikis">Çıkış</string>
    <string name="text_takip_edilen">Takip Edilen</string>
    <string name="text_takipci">Takipçi</string>
    <string name="title_activity_anket_olustur">Anket Oluştur</string>
    <string name="title_arkadaslarini_bul">Sence Hangisi\'inde Bul</string>
    <string name="bul_label">Sence Hangisi\'inde Ara</string>
    <string name="title_activity_takipciler">Takipçiler</string>
    <string name="title_activity_takip_edilen">Takip Edilen</string>
    <string name="title_tablayout_anaSayfa">Ana Sayfa</string>
    <string name="title_tablayout_enPopuler">En Popüler</string>
    <string name="yeni_adSoyadınız"> Yeni Adınız ve Soyadınız</string>
    <string name="yeni_adSoyad"> Yeni Ad Soyad</string>
    <string name="yeni_adSoyad_buton"> Ad Soyadını Güncelle</string>
    <string name="search_hint">Kullanıcı ara…</string>
</resources>
